# rust-avr-code-generation-bug

./: Cargo.toml  README.md  compare-disassembly.sh
src/: bad.rs  good.rs  main.rs
